Fix web view tag getting cut off in newer versions of electron

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -139,6 +139,10 @@ div.container {
 
 .preview-box {
 	width: 50%;
+
+	webview {
+		height: 100%;
+	}
 }
 
 .preview-box-dev-tools-btn {
